<resources>
    <string name="app_name">Nutrition Tracker</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_log_in">Click to Log in</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="log_out">Log out</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="camera">Camera</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="new_event">New Event</string>
    <string name="prev"><![CDATA[<-]]></string>
    <string name="nextv"><![CDATA[->]]></string>
    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="fab_content_description">Open Image Gallery</string>
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="use_the_floating_action_button_to_select_an_image">Use the floating action button to select an image.</string>
    <string name="go_back">Go back.</string>
    <string name="go_forward">Go forward.</string>
    <string name="open_the_camera">Open the Camera</string>
    <string name="daily">Daily</string>
    <string name="settings">Settings.</string>
</resources>