<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    tools:context=".UserInfoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Height (cm)"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Weight (kg)"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"/>

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <SeekBar
        android:id="@+id/activitySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="4"
        android:progress="2" />

    <TextView
        android:id="@+id/activityLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moderately Active (3-4 days in a week)"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="16dp"
    />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Submit"
        android:padding="10dp"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/orange"
        android:padding="8dp">

        <ImageView
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_settings_suggest_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:contentDescription="@string/settings"
            android:onClick="editUserInfo"/>

        <ImageView
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_space_dashboard_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:contentDescription="@string/settings"
            android:onClick="summaryAction"/>

        <ImageView
            android:id="@+id/camera"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_photo_camera_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:contentDescription="@string/open_the_camera"
            android:onClick="cameraAction"/>

        <ImageView
            android:id="@+id/log_out"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_sensor_door_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:contentDescription="@string/log_out"
            />
    </LinearLayout>
    </RelativeLayout>

</LinearLayout>
